Fix zooming layout issue in the menu page

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,7 +73,7 @@ p {
   display: flex;
   align-items: center;
   background-color: var(--clr-1);
-  padding: 0 clamp(0.5rem, 2vw, 1.5rem);
+  padding: 0 clamp(1rem, 2vw, 1.5rem);
 }
 
 /*Main page*/
@@ -170,6 +170,12 @@ p {
   margin: 2rem 0;
   padding: 0;
   width: 100%;
+}
+
+@media (max-width: 400px) {
+  .menu-page {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
 }
 
 .dish {
